--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -1,7 +1,5 @@
 openai>=1.0.0
 ffmpeg-python>=0.2.0
-google-api-python-client>=2.0.0
 google-auth>=2.0.0
-google-auth-httplib2>=0.2.0
 google-cloud-secret-manager>=2.0.0
-google-cloud-pubsub>=2.0.0
+dropbox>=12.0.0
