--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -6,9 +6,14 @@ dependencies = [
     "dropbox>=12.0.2",
     "python-dotenv>=1.0.0",
     "click>=8.0.0",
+    "openai>=1.0.0",
+    "ffmpeg-python>=0.2.0",
 ]
 requires-python = ">=3.8"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["."]
