--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "click>=8.0.0",
     "openai>=1.0.0",
     "ffmpeg-python>=0.2.0",
+    "requests>=2.25.0",
 ]
 requires-python = ">=3.8"
 
