--- a/webhook/Dockerfile
+++ b/webhook/Dockerfile
@@ -1,22 +1,21 @@
 FROM python:3.11-slim
 
-# Install system dependencies including ffmpeg
-RUN apt-get update && apt-get install -y \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set working directory
 WORKDIR /app
 
-# Copy requirements first for better caching
-COPY requirements.txt .
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
+# Copy requirements and install Python dependencies
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
-COPY main.py .
-COPY src/ ./src/
+COPY . .
+
+# Expose port
+EXPOSE 8080
 
 # Run the application
 CMD ["python", "main.py"]
