--- a/webhook/Dockerfile
+++ b/webhook/Dockerfile
@@ -1,21 +1,13 @@
+# DEPRECATED: Use root Dockerfile instead  
+# Build with: docker build --target webhook -t transcription-webhook .
+#
+# This file is kept for reference but should not be used.
+# The new monorepo build uses the root Dockerfile with multi-stage builds.
+
 FROM python:3.11-slim
 
-WORKDIR /app
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    && rm -rf /var/lib/apt/lists/*
-
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
-COPY . .
-
-# Expose port
-EXPOSE 8080
-
-# Run the application
-CMD ["python", "main.py"]
+# Placeholder - redirects to root build
+RUN echo "❌ This Dockerfile is deprecated!" && \
+    echo "✅ Use root Dockerfile instead:" && \
+    echo "   docker build --target webhook -t transcription-webhook ." && \
+    exit 1
