--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,22 +1,13 @@
+# DEPRECATED: Use root Dockerfile instead
+# Build with: docker build --target worker -t transcription-worker .
+#
+# This file is kept for reference but should not be used.
+# The new monorepo build uses the root Dockerfile with multi-stage builds.
+
 FROM python:3.11-slim
 
-# Install system dependencies including ffmpeg
-RUN apt-get update && apt-get install -y \
-    ffmpeg \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set working directory
-WORKDIR /app
-
-# Copy requirements first for better caching
-COPY requirements.txt .
-
-# Install Python dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy application code
-COPY main.py .
-COPY src/ ./src/
-
-# Run the application
-CMD ["python", "main.py"]
+# Placeholder - redirects to root build
+RUN echo "❌ This Dockerfile is deprecated!" && \
+    echo "✅ Use root Dockerfile instead:" && \
+    echo "   docker build --target worker -t transcription-worker ." && \
+    exit 1
