--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,11 +11,10 @@ on:
       environment:
         description: 'Deployment environment'
         required: true
-        default: 'staging'
+        default: 'dev'
         type: choice
         options:
-        - staging
-        - production
+        - dev
       cloud_provider:
         description: 'Cloud provider'
         required: true
@@ -23,8 +22,6 @@ on:
         type: choice
         options:
         - gcp
-        - aws
-        - azure
         - docker
 
 env:
@@ -134,12 +131,12 @@ jobs:
       run: |
         docker run --rm transcription-${{ matrix.service }}:latest python --version
 
-  # Deploy to staging
-  deploy-staging:
+  # Deploy to development
+  deploy-dev:
     runs-on: ubuntu-latest
     needs: [test-and-validate, build-images]
-    if: github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging')
-    environment: staging
+    if: github.ref == 'refs/heads/main' || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'dev')
+    environment: development
     
     steps:
     - name: Checkout code
@@ -147,13 +144,13 @@ jobs:
     
     - name: Set up environment variables
       run: |
-        echo "ENVIRONMENT=staging" >> $GITHUB_ENV
+        echo "ENVIRONMENT=dev" >> $GITHUB_ENV
         echo "CLOUD_PROVIDER=${{ github.event.inputs.cloud_provider || 'docker' }}" >> $GITHUB_ENV
         echo "TAG=${{ github.sha }}" >> $GITHUB_ENV
     
-    - name: Deploy to staging
+    - name: Deploy to development
       run: |
-        ./deploy/deploy.sh \
+        ./deploy/scripts/deploy.sh \
           --provider ${{ env.CLOUD_PROVIDER }} \
           --environment ${{ env.ENVIRONMENT }} \
           --tag ${{ env.TAG }} \
@@ -164,39 +161,6 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
 
-  # Deploy to production
-  deploy-production:
-    runs-on: ubuntu-latest
-    needs: [test-and-validate, build-images]
-    if: startsWith(github.ref, 'refs/tags/v') || (github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production')
-    environment: production
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Extract tag version
-      if: startsWith(github.ref, 'refs/tags/v')
-      run: echo "TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-    
-    - name: Set deployment variables
-      run: |
-        echo "ENVIRONMENT=production" >> $GITHUB_ENV
-        echo "CLOUD_PROVIDER=${{ github.event.inputs.cloud_provider || 'gcp' }}" >> $GITHUB_ENV
-        echo "TAG=${{ env.TAG || github.sha }}" >> $GITHUB_ENV
-    
-    - name: Deploy to production
-      run: |
-        ./deploy/deploy.sh \
-          --provider ${{ env.CLOUD_PROVIDER }} \
-          --environment ${{ env.ENVIRONMENT }} \
-          --tag ${{ env.TAG }} \
-          --dry-run
-      env:
-        PROJECT_ID: ${{ vars.PROJECT_ID }}
-        REGION: ${{ vars.REGION }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        DROPBOX_ACCESS_TOKEN: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
 
   # Security scanning
   security-scan:
@@ -237,7 +201,7 @@ jobs:
   # Performance testing
   performance-test:
     runs-on: ubuntu-latest
-    needs: deploy-staging
+    needs: deploy-dev
     if: github.ref == 'refs/heads/main'
     
     steps:
@@ -281,12 +245,12 @@ jobs:
         EOF
         
         # Run performance test (mock - would need actual deployment)
-        echo "Performance testing would run here against staging environment"
+        echo "Performance testing would run here against development environment"
 
   # Notification
   notify-deployment:
     runs-on: ubuntu-latest
-    needs: [deploy-staging, deploy-production, security-scan]
+    needs: [deploy-dev, security-scan]
     if: always()
     
     steps:
@@ -302,4 +266,4 @@ jobs:
           Commit: ${{ github.sha }}
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        ENVIRONMENT: ${{ github.event.inputs.environment || 'staging' }}
+        ENVIRONMENT: ${{ github.event.inputs.environment || 'dev' }}
