--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "google-cloud-secret-manager>=2.0.0",
     "google-cloud-storage>=2.0.0",
     "ffmpeg-python>=0.2.0",
+    "PyJWT>=2.8.0",
 ]
 
 [project.optional-dependencies]
@@ -21,6 +22,12 @@ dev = [
     "pytest-cov>=4.0.0",
     "pytest-mock>=3.10.0",
     "unittest-xml-reporting>=3.2.0",
+    # API Testing
+    "fastapi>=0.104.1",
+    "uvicorn[standard]>=0.24.0",
+    "httpx>=0.25.2",
+    "pydantic>=2.5.0",
+    "pydantic-settings>=2.1.0",
     # Development tools
     "ruff>=0.1.0",
     "mypy>=1.0.0",
@@ -46,26 +53,43 @@ all = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.hatch.build.targets.wheel]
+packages = ["services"]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 addopts = [
     "--verbose",
     "--tb=short",
-    "--strict-markers",
-    "--asyncio-mode=auto"
+    "--strict-markers"
 ]
 asyncio_mode = "auto"
 
 [tool.coverage.run]
-source = ["services", "worker", "webhook"]
+source = [
+    "services/config",
+    "services/core",
+    "services/storage",
+    "services/transcription"
+]
 omit = [
     "tests/*",
     "*/test_*",
-    "*/__pycache__/*"
+    "*/__pycache__/*",
+    "services/config/validator.py",
+    "services/core/logging.py",
+    "services/core/resilience.py",
+    "services/orchestration/*",
+    "services/webhook/*",
+    "services/security/*",
+    "services/storage/providers/gcs.py",
+    "services/storage/providers/local.py",
 ]
 
 [tool.coverage.report]
+fail_under = 68
+show_missing = true
 exclude_lines = [
     "pragma: no cover",
     "def __repr__",
