Configure workflows to use video-to-transcript environment
- Add environment specification to both workflows
- Allows using environment-specific secrets
- Enables environment protection rules and approvals

--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -18,6 +18,7 @@ env:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    environment: video-to-transcript
 
     permissions:
       contents: read
