--- a/.github/workflows/deploy-worker.yml
+++ b/.github/workflows/deploy-worker.yml
@@ -38,10 +38,31 @@ jobs:
 
       - name: Build and push Docker image to GCR
         run: |
-          gcloud builds submit \
+          BUILD_ID=$(gcloud builds submit \
             --tag gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:latest \
             --tag gcr.io/${{ env.PROJECT_ID }}/${{ env.IMAGE_NAME }}:${{ github.sha }} \
-            ./worker
+            --format='value(id)' \
+            --async \
+            ./worker)
+
+          echo "Build ID: $BUILD_ID"
+          echo "Waiting for build to complete..."
+
+          while true; do
+            STATUS=$(gcloud builds describe $BUILD_ID --format='value(status)')
+            echo "Build status: $STATUS"
+
+            if [ "$STATUS" = "SUCCESS" ]; then
+              echo "✅ Build completed successfully!"
+              break
+            elif [ "$STATUS" = "FAILURE" ] || [ "$STATUS" = "TIMEOUT" ] || [ "$STATUS" = "CANCELLED" ]; then
+              echo "❌ Build failed with status: $STATUS"
+              gcloud builds log $BUILD_ID
+              exit 1
+            fi
+
+            sleep 10
+          done
 
       - name: Deploy to Cloud Run Job
         run: |
